- add reset button

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -16,6 +16,7 @@ html
         h1= title
         .btn-group
           button.btn.btn-lg.btn-primary(type="button", onclick="kioskWrapperClient.openSettings()") open settings
+          button.btn.btn-lg.btn-primary(type="button", onclick="kioskWrapperClient.resetSettings()") reset settings
           button.btn.btn-lg.btn-primary(type="button", onclick="kioskWrapperClient.notificationFire()") notification fire
 
         br
